--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
-title: Oscar's homepage
-description: Bookmark this to keep an eye on my project updates!
+
+title: Oscar Arana
+email: oxa318@miami.edu
+logo: hopf.JPG
