--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
 
 title: Oscar Arana
-email: oxa318@miami.edu
+email: oarana543@gmail.com
 logo: hopf.jpg
